--- a/_publications/2024-01-31-plutus.md
+++ b/_publications/2024-01-31-plutus.md
@@ -1,9 +1,9 @@
 ---
 title: 'Plutus: Understanding Data Distribution Tailoring for Machine Learning (Demo)'
 collection: publications
-permalink: /publication/2024-01-31-plutus
+permalink: /publications/2024-01-31-plutus
 date: 2024-01-31
 venue: 'SIGMOD'
 link: 'https://doi.org/10.1145/3626246.3654745'
-citation: 'Jiwon Chang, Christina Dionysio, Fatemeh Nargesian, and Matthias Boehm. 2024. PLUTUS: Understanding Data Distribution Tailoring for Machine Learning. In Companion of the 2024 International Conference on Management of Data (SIGMOD/PODS '24). Association for Computing Machinery, New York, NY, USA, 528–531. https://doi.org/10.1145/3626246.3654745'
+citation: 'Jiwon Chang, Christina Dionysio, Fatemeh Nargesian, and Matthias Boehm. PLUTUS: Understanding Data Distribution Tailoring for Machine Learning. (DEMO) SIGMOD 2024'
 ---
