--- a/_publications/2024-01-31-plutus.md
+++ b/_publications/2024-01-31-plutus.md
@@ -3,7 +3,7 @@ title: 'Plutus: Understanding Data Distribution Tailoring for Machine Learning (
 collection: publications
 permalink: /publications/2024-01-31-plutus
 date: 2024-01-31
-venue: 'SIGMOD'
+venue: 'SIGMOD 2024'
 link: 'https://doi.org/10.1145/3626246.3654745'
 citation: 'Jiwon Chang, Christina Dionysio, Fatemeh Nargesian, and Matthias Boehm. PLUTUS: Understanding Data Distribution Tailoring for Machine Learning. (DEMO) SIGMOD 2024'
 ---
