add publication links for btw25

--- a/_publications/2024-08-10-shap.md
+++ b/_publications/2024-08-10-shap.md
@@ -4,6 +4,6 @@ collection: publications
 permalink: /publications/2024-10-08-shap
 date: 2024-10-08
 venue: 'BTW 2025'
-link: ''
+link: 'https://dl.gi.de/server/api/core/bitstreams/78feeb70-49e5-474e-8120-387e493c4947/content'
 citation: 'Louis Le Page, Christina Dionysio, Matthias Boehm. Scalable Computation of Shapley Additive Explanations, BTW 2025'
 ---
